# SoundMatcher

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/database/: db.cpp  db.h
src/fingerprint/: commons.h  create.cpp  create.h  create_fingerprint.cpp  create_fingerprint.h  match.cpp  match.h
src/preprocessing/: wav_reader.cpp  wav_reader.h
